@@ -1,27 +1,48 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.Crop;
+import com.example.demo.entity.Fertilizer;
 import com.example.demo.repository.CropRepository;
+import com.example.demo.repository.FertilizerRepository;
 import com.example.demo.service.CatalogService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CatalogServiceImpl implements CatalogService {
 
     private final CropRepository cropRepository;
+    private final FertilizerRepository fertilizerRepository;
 
-    public CatalogServiceImpl(CropRepository cropRepository) {
+    public CatalogServiceImpl(CropRepository cropRepository,
+                              FertilizerRepository fertilizerRepository) {
         this.cropRepository = cropRepository;
+        this.fertilizerRepository = fertilizerRepository;
+    }
+
+    @Override
+    public List<Crop> getAllCrops() {
+        return cropRepository.findAll();
     }
 
     @Override
     public List<Crop> findSuitableCrops(Double ph, Double water, String season) {
-        return cropRepository.findAll().stream()
+        return cropRepository.findAll()
+                .stream()
                 .filter(c -> c.getSuitablePHMin() <= ph)
                 .filter(c -> c.getSuitablePHMax() >= ph)
                 .filter(c -> c.getSeason().equalsIgnoreCase(season))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Fertilizer> findFertilizersForCrops(List<String> cropNames) {
+        return fertilizerRepository.findAll()
+                .stream()
+                .filter(f -> cropNames.stream()
+                        .anyMatch(c -> f.getRecommendedForCrops().contains(c)))
+                .collect(Collectors.toList());
     }
 }
